--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body> <!-- Aqui arranca el cuerpo de la pagina. Aplica formato usando class-->
         <header class="encabezado">
-                <a class="brand" href="index.html">AlmaViva Home & Deco</a>
+                <a class="brand" href="index.html"><h2>AlmaViva Home & Deco</h2></a>
         </header>
         <section class="nav-contenedor">
 
