--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <header class="encabezado">
-        <a class="brand" href="../index.html">AlmaViva Home & Deco</a>
-    </header>
+        <a class="brand" href="index.html"><h2>AlmaViva Home & Deco</h2></a>
+</header>
     <section class="nav-contenedor">
         
     <nav class="navbar navbar-expand-lg  ">
