--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,8 +13,9 @@
     <title>Alma Viva Home & Deco- Nosotros</title>
 
 </head>
-<body class= "look1">    <header class="encabezado">
-    <a class="brand" href="../index.html">AlmaViva Home & Deco</a>
+<body class= "look1">  
+<header class="encabezado">
+        <a class="brand" href="index.html"><h2>AlmaViva Home & Deco</h2></a>
 </header>
 <section class="nav-contenedor">
     
