--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
 </head>
 
 <body> <!-- Aqui arranca el cuerpo de la pagina. Aplica formato usando class-->
-        <header class="encabezado">
-                <a class="brand" href="index.html"><h2>AlmaViva Home & Deco</h2></a>
-        </header>
-        <section class="nav-contenedor">
 
-                <nav class="navbar navbar-expand-lg  ">
-                        <div class="container-fluid justify-content-center">
+        
+
+                <nav class="navbar navbar-expand-lg ">
+                        <a class="navbar-brand" href="./index.html">
+                                <img src="./img/Almavivalogo2.png" alt="" >
+                        </a>
+                        <div class="container-fluid">  <!--justify-content-center-->
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                         aria-expanded="false" aria-label="Toggle navigation">
                                         <span class="navbar-toggler-icon"></span>
                                 </button>
-                                <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+                                <div class="collapse navbar-collapse " id="navbarSupportedContent">
                                         <!-- se agrego flex-grow-0 para poder centrar-->
-                                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                        <ul class="navbar-nav ">  <!--me-auto mb-2 mb-lg-0-->
                                                 <li class="nav-item">
                                                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                                 </li>
@@ -71,14 +72,12 @@
                                 </div>
                         </div>
                 </nav>
-        </section>
+        
         <main> <!-- Aqui empieza la parte principal de la pagina-->
                 <section class="hero">
-                        <h2>Bienvenidos</h2>
-                        <p>Imagina un lugar donde cada rincón te susurra paz y alegría.
-                                Un espacio que te abraza con calidez y te invita a soñar despierto.
-                                Un refugio donde tu esencia se refleja en cada detalle
-                        </p>
+                        <h2>Bienvenidos a AlmaViva Home & Deco</h2>
+                        <p>Imagina un lugar donde cada rincón te susurra paz y alegría. Un espacio que te abraza con calidez y te invita a soñar despierto. Un refugio donde tu esencia se refleja en cada detalle</p>
+  
                         <!-- comienza el codigo agregado por bootstrap-->
                         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
