--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,52 +14,57 @@
 
 </head>
 <body class= "look1">  
-<header class="encabezado">
-        <a class="brand" href="index.html"><h2>AlmaViva Home & Deco</h2></a>
-</header>
-<section class="nav-contenedor">
-    
-<nav class="navbar navbar-expand-lg  ">
-    <div class="container-fluid justify-content-center">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">     <!-- se agrego flex-grow-0 para poder centrar-->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Productos
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="../pages/productos.html">Velas</a></li>
-                        <li><a class="dropdown-item" href="../pages/productos.html">Accesorios</a></li>
-                        <li><a class="dropdown-item" href="../pages/productos.html">Almohadones</a></li>
-                      </ul>
-                </li>
+    <nav class="navbar navbar-expand-lg ">
+        <a class="navbar-brand" href="../index.html">
+                <img src="../img/Almavivalogo2.png" alt="">
+        </a>
+        <div class="container-fluid"> <!--justify-content-center-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <!-- se agrego flex-grow-0 para poder centrar-->
+                        <ul class="navbar-nav "> <!--me-auto mb-2 mb-lg-0-->
+                                <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                                data-bs-toggle="dropdown" aria-expanded="false">
+                                                Productos
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="../pages/productos.html">Velas</a>
+                                                </li>
+                                                <li><a class="dropdown-item"
+                                                                href="../pages/productos.html">Accesorios</a>
+                                                </li>
+                                                <li><a class="dropdown-item"
+                                                                href="../pages/productos.html">Almohadones</a>
+                                                </li>
+                                        </ul>
+                                </li>
 
 
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                </li>
 
 
-            </ul>
+                        </ul>
 
+                </div>
         </div>
-    </div>
 </nav>
-</section>
+ 
 <main>
     <section class="nosotros"> 
         <h2>Sobre Nosotros</h2>
