--- a/index.html
+++ b/index.html
@@ -20,59 +20,56 @@
 <body> <!-- Aqui arranca el cuerpo de la pagina. Aplica formato usando class-->
 
         
-
-                <nav class="navbar navbar-expand-lg ">
-                        <a class="navbar-brand" href="./index.html">
-                                <img src="./img/Almavivalogo2.png" alt="" >
-                        </a>
-                        <div class="container-fluid">  <!--justify-content-center-->
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                        aria-expanded="false" aria-label="Toggle navigation">
-                                        <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                                        <!-- se agrego flex-grow-0 para poder centrar-->
-                                        <ul class="navbar-nav ">  <!--me-auto mb-2 mb-lg-0-->
-                                                <li class="nav-item">
-                                                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+<nav class="navbar navbar-expand-lg ">
+        <a class="navbar-brand" href="./index.html">
+                <img src="./img/Almavivalogo2.png" alt="">
+        </a>
+        <div class="container-fluid"> <!--justify-content-center-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <!-- se agrego flex-grow-0 para poder centrar-->
+                        <ul class="navbar-nav "> <!--me-auto mb-2 mb-lg-0-->
+                                <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                                data-bs-toggle="dropdown" aria-expanded="false">
+                                                Productos
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="./pages/productos.html">Velas</a>
                                                 </li>
-                                                <li class="nav-item dropdown">
-                                                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                                                                data-bs-toggle="dropdown" aria-expanded="false">
-                                                                Productos
-                                                        </a>
-                                                        <ul class="dropdown-menu">
-                                                                <li><a class="dropdown-item"
-                                                                                href="./pages/productos.html">Velas</a>
-                                                                </li>
-                                                                <li><a class="dropdown-item"
-                                                                                href="./pages/productos.html">Accesorios</a>
-                                                                </li>
-                                                                <li><a class="dropdown-item"
-                                                                                href="./pages/productos.html">Almohadones</a>
-                                                                </li>
-                                                        </ul>
+                                                <li><a class="dropdown-item"
+                                                                href="./pages/productos.html">Accesorios</a>
                                                 </li>
-
-
-                                                <li class="nav-item">
-                                                        <a class="nav-link" href="./pages/servicios.html">Servicios</a>
+                                                <li><a class="dropdown-item"
+                                                                href="./pages/productos.html">Almohadones</a>
                                                 </li>
-                                                <li class="nav-item">
-                                                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                                                </li>
-
-
                                         </ul>
+                                </li>
 
-                                </div>
-                        </div>
-                </nav>
-        
+
+                                <li class="nav-item">
+                                        <a class="nav-link" href="./pages/servicios.html">Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                </li>
+
+
+                        </ul>
+
+                </div>
+        </div>
+</nav>
         <main> <!-- Aqui empieza la parte principal de la pagina-->
                 <section class="hero">
                         <h2>Bienvenidos a AlmaViva Home & Deco</h2>
