--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="../css/styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/estilos.css">
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Esta linea linke Bootstrap-->
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,131 +14,141 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <title>Alma Viva Home & Deco- Productos</title>
+        <title>Alma Viva Home & Deco- Productos</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand" href="../index.html">
-                <img src="../img/Almavivalogo2.png" alt="">
-        </a>
-        <div class="container-fluid"> <!--justify-content-center-->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                        <!-- se agrego flex-grow-0 para poder centrar-->
-                        <ul class="navbar-nav "> <!--me-auto mb-2 mb-lg-0-->
-                                <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                                                data-bs-toggle="dropdown" aria-expanded="false">
-                                                Productos
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                                <li><a class="dropdown-item" href="../pages/productos.html">Velas</a>
+        <header>
+                <nav class="navbar navbar-expand-lg ">
+                        <a class="navbar-brand" href="../index.html">
+                                <img src="../img/Almavivalogo2.png" alt="">
+                        </a>
+                        <div class="container-fluid"> <!--justify-content-center-->
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                        aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                                        <!-- se agrego flex-grow-0 para poder centrar-->
+                                        <ul class="navbar-nav "> <!--me-auto mb-2 mb-lg-0-->
+                                                <li class="nav-item">
+                                                        <a class="nav-link active" aria-current="page"
+                                                                href="../index.html">Home</a>
                                                 </li>
-                                                <li><a class="dropdown-item"
-                                                                href="../pages/productos.html">Accesorios</a>
+                                                <li class="nav-item dropdown">
+                                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                                                data-bs-toggle="dropdown" aria-expanded="false">
+                                                                Productos
+                                                        </a>
+                                                        <ul class="dropdown-menu">
+                                                                <li><a class="dropdown-item"
+                                                                                href="../pages/productos.html">Velas</a>
+                                                                </li>
+                                                                <li><a class="dropdown-item"
+                                                                                href="../pages/productos.html">Accesorios</a>
+                                                                </li>
+                                                                <li><a class="dropdown-item"
+                                                                                href="../pages/productos.html">Almohadones</a>
+                                                                </li>
+                                                        </ul>
                                                 </li>
-                                                <li><a class="dropdown-item"
-                                                                href="../pages/productos.html">Almohadones</a>
+
+
+                                                <li class="nav-item">
+                                                        <a class="nav-link" href="../pages/servicios.html">Servicios</a>
                                                 </li>
+                                                <li class="nav-item">
+                                                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                                </li>
+
+
                                         </ul>
-                                </li>
 
+                                </div>
+                        </div>
+                </nav>
+        </header>
+        <main class="productos-main">
+                <section class="productos">
+                        <h1>Productos</h1>
+                        <p>Conocé los productos que llevarán a tu hogar al próximo nivel</p>
+                </section>
+                <section class="tarjetas-de-producto">
+                        <div>
+                                <img src="../img/Vela-sojs-prod.jpg" alt="Vela de Soja" width="100%" height="75%"">
+                            <h3>Velas de Soja</h3>            
+                            <a href="">COMPRAR</a>
+                        </div>
+                        <div>
+                            <img src=" ../img/almohadones.jpg" alt="" width="150" height=150px>
+                                <h3>Almohadones</h3>
+                                <a href="">COMPRAR</a>
+                        </div>
+                        <div>
+                                <img src="../img/vajilla.jpg" alt="" width="150px" height=150px>
+                                <h3>Vajilla</h3>
+                                <a href="">COMPRAR</a>
+                        </div>
+                        <div>
+                                <img src="../img/accesorios.jpg" alt="" width="150px" height=150px>
+                                <h3>Accesorios</h3>
+                                <a href="">COMPRAR</a>
+                        </div>
+                        <div class="tar-prod-5">
+                                <img src="../img/bano.jpg" alt="" width="150px" height=150px>
+                                <h3>Baño</h3>
+                                <a href="">COMPRAR</a>
+                        </div>
+                </section>
+        
+        
+        </main>
 
-                                <li class="nav-item">
-                                        <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-                                </li>
-                                <li class="nav-item">
-                                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
-                                </li>
-                                <li class="nav-item">
-                                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                                </li>
+        <footer> <!--Aqui empieza el footer -->
+                <h4>Nuestras Redes</h4>
+                <section class="redes"> <!--Iconos de redes sociales-->
 
-
-                        </ul>
-
-                </div>
+                        <div class="GridRedes">
+                                <div class="icono-fb">
+                                        <i class="bi bi-facebook"></i>
+                                </div>
+                                <div class="texto-fb">
+                                        <a href="http://www.facbook.com" target="_blank">Facebook</a>
+                                </div>
+                                <div class="icono-x">
+                                        <i class="bi bi-twitter-x"></i>
+                                </div>
+                                <div class="texto-x">
+                                        <a href="http://www.twitter.com" target="_blank"> @almavivadeco</a>
+                                </div>
+                                <div class="icono-instagram">
+                                        <i class="bi bi-instagram"></i>
+                                </div>
+                                <div class="texto-instagram">
+                                        <a href="http://www.instagram.com" target="_blank">Instagram - @almavivadeco</a>
+                                </div>
+                                <div class="icono-tiktok">
+                                        <i class="bi bi-tiktok"></i>
+                                </div>
+                                <div class="texto-tiktok">
+                                        <a href="https://www.tiktok.com/" target="_blank">TikTok- @almavivadeco</a>
+                                </div>
+                        </div>
+                </section>
+        </footer>
+        <div class="contactenos"> <!--Boton de whatsap-->
+                <img src="../img/whatsapp.png" alt="">
+                <h5>Contactenos!</h5>
         </div>
-</nav>
-<main class="productos-main">
-    <section class="productos">
-        <h2>Productos</h2>
-        <p>Conocé los productos que llevarán a tu hogar al próximo nivel</p>
-    </section>    
-        <section class="tarjetas-de-producto">         
-            <div>
-                <img src="../img/Vela-sojs-prod.jpg" alt="Vela de Soja" width="100%"height="75%"">
-                <h3>Velas de Soja</h3>            
-                <a href="">COMPRAR</a>
-            </div>
-            <div>
-                <img src="../img/almohadones.jpg" alt="" width="150"height=150px>
-                <h3>Almohadones</h3>
-                <a href="">COMPRAR</a>
-            </div>
-            <div>
-                <img src="../img/vajilla.jpg" alt="" width="150px"height=150px>
-                <h3>Vajilla</h3>
-                <a href="">COMPRAR</a>
-            </div>
-            <div>
-                <img src="../img/accesorios.jpg" alt="" width="150px"height=150px>
-                <h3>Accesorios</h3>
-                <a href="">COMPRAR</a>
-            </div>
-            <div class="tar-prod-5">
-                <img src="../img/bano.jpg" alt="" width="150px"height=150px>
-                <h3>Baño</h3>
-                <a href="">COMPRAR</a>
-            </div>
-        </section>
-
-
-</main>
-<footer>                            <!--Aqui empieza el footer -->
-    <h4>Nuestras Redes</h4>
-    <section class="redes">                           <!--Iconos de redes sociales-->
-
-            <div class="GridRedes">
-                    <div class="icono-fb">
-                            <i class="bi bi-facebook"></i>
-                    </div>
-                    <div class="texto-fb">
-                            <a href="http://www.facbook.com" target="_blank">Facebook</a>
-                    </div>
-                    <div class="icono-x">
-                            <i class="bi bi-twitter-x"></i>
-                    </div>
-                    <div class="texto-x">
-                            <a href="http://www.twitter.com" target="_blank">  @almavivadeco</a>
-                    </div>
-                    <div class="icono-instagram">
-                            <i class="bi bi-instagram"></i>
-                    </div>
-                    <div class="texto-instagram">
-                            <a href="http://www.instagram.com" target="_blank">Instagram - @almavivadeco</a>
-                    </div>
-                    <div class="icono-tiktok">
-                            <i class="bi bi-tiktok"></i>
-                    </div>
-                    <div class="texto-tiktok">
-                            <a href="https://www.tiktok.com/" target="_blank">TikTok- @almavivadeco</a>
-                    </div>
-            </div>
-    </section>
-</footer><div class="contactenos">               <!--Boton de whatsap-->
-    <img src="../img/whatsapp.png" alt="">
-    <h5>Contactenos!</h5>
-</div>
         <!-- esta linea es para bootstrap-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
 
 </body>
+
 </html>
