--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alma Viva Home & Deco- Servicios</title>
@@ -13,59 +13,63 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand" href="../index.html">
-                <img src="../img/Almavivalogo2.png" alt="">
-        </a>
-        <div class="container-fluid"> <!--justify-content-center-->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                        <!-- se agrego flex-grow-0 para poder centrar-->
-                        <ul class="navbar-nav "> <!--me-auto mb-2 mb-lg-0-->
-                                <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                                                data-bs-toggle="dropdown" aria-expanded="false">
-                                                Productos
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                                <li><a class="dropdown-item" href="../pages/productos.html">Velas</a>
-                                                </li>
-                                                <li><a class="dropdown-item"
-                                                                href="../pages/productos.html">Accesorios</a>
-                                                </li>
-                                                <li><a class="dropdown-item"
-                                                                href="../pages/productos.html">Almohadones</a>
-                                                </li>
-                                        </ul>
-                                </li>
+<header>
+        <nav class="navbar navbar-expand-lg ">
+                <a class="navbar-brand" href="../index.html">
+                        <img src="../img/Almavivalogo2.png" alt="">
+                </a>
+                <div class="container-fluid"> <!--justify-content-center-->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                                <!-- se agrego flex-grow-0 para poder centrar-->
+                                <ul class="navbar-nav "> <!--me-auto mb-2 mb-lg-0-->
+                                        <li class="nav-item">
+                                                <a class="nav-link active" aria-current="page"
+                                                        href="../index.html">Home</a>
+                                        </li>
+                                        <li class="nav-item dropdown">
+                                                <a class="nav-link dropdown-toggle" href="#" role="button"
+                                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                                        Productos
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                        <li><a class="dropdown-item"
+                                                                        href="../pages/productos.html">Velas</a>
+                                                        </li>
+                                                        <li><a class="dropdown-item"
+                                                                        href="../pages/productos.html">Accesorios</a>
+                                                        </li>
+                                                        <li><a class="dropdown-item"
+                                                                        href="../pages/productos.html">Almohadones</a>
+                                                        </li>
+                                                </ul>
+                                        </li>
 
 
-                                <li class="nav-item">
-                                        <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-                                </li>
-                                <li class="nav-item">
-                                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
-                                </li>
-                                <li class="nav-item">
-                                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                                </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                        </li>
 
 
-                        </ul>
+                                </ul>
 
+                        </div>
                 </div>
-        </div>
-</nav>
+        </nav>
+</header>
 <main>
     <section class="servicios">
-        <h2>Servicios</h2>
+        <h1>Servicios</h1>
         <p class="servicios-p1">Conocé nuestros servicios de estilismo y diseño de interiores.  </p>
         <p class="servicios-p2">Te asesoramos para diseñar espacios personalizados, donde tu estilo será el principal protagonista.</p>
         
