--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -29,6 +29,8 @@
 
 </head>
 <body class= "look1">  
+        <div class="page-container">
+        <div class="content-wrap">
 <header>
         <nav class="navbar navbar-expand-lg ">
                 <a class="navbar-brand" href="../index.html">
@@ -88,47 +90,55 @@
     <section class="nosotros"> 
         <h2>Sobre Nosotros</h2>
         <p>Somos una empresa familiar, nacida hace 4 años durante la pandemia. desde ese momento nos dedicamos al bienestar personal y del hogar.</p>
+        <h3>Trabajando para vos!</h3>
+        <section class="video-nosotros">
+                <iframe  src="https://www.youtube.com/embed/l2qzdHIw_dY?si=c-lX4W23uG_Xua0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        
     </section>
 </main>
-<footer>                            <!--Aqui empieza el footer -->
-    <h4>Nuestras Redes</h4>
-    <section class="redes">                           <!--Iconos de redes sociales-->
+</div>
+<footer> <!--Aqui empieza el footer -->
+        <h4>Nuestras Redes</h4>
+        <section class="redes"> <!--Iconos de redes sociales-->
 
-            <div class="GridRedes">
-                    <div class="icono-fb">
-                            <i class="bi bi-facebook"></i>
-                    </div>
-                    <div class="texto-fb">
-                            <a href="http://www.facbook.com" target="_blank">Facebook</a>
-                    </div>
-                    <div class="icono-x">
-                            <i class="bi bi-twitter-x"></i>
-                    </div>
-                    <div class="texto-x">
-                            <a href="http://www.twitter.com" target="_blank">  @almavivadeco</a>
-                    </div>
-                    <div class="icono-instagram">
-                            <i class="bi bi-instagram"></i>
-                    </div>
-                    <div class="texto-instagram">
-                            <a href="http://www.instagram.com" target="_blank">Instagram - @almavivadeco</a>
-                    </div>
-                    <div class="icono-tiktok">
-                            <i class="bi bi-tiktok"></i>
-                    </div>
-                    <div class="texto-tiktok">
-                            <a href="https://www.tiktok.com/" target="_blank">TikTok- @almavivadeco</a>
-                    </div>
-            </div>
-    </section>
+                <div class="GridRedes">
+                        <div class="icono-fb">
+                                <i class="bi bi-facebook"></i>
+                        </div>
+                        <div class="texto-fb">
+                                <a href="http://www.facbook.com" target="_blank">Facebook</a>
+                        </div>
+                        <div class="icono-x">
+                                <i class="bi bi-twitter-x"></i>
+                        </div>
+                        <div class="texto-x">
+                                <a href="http://www.twitter.com" target="_blank"> @almavivadeco</a>
+                        </div>
+                        <div class="icono-instagram">
+                                <i class="bi bi-instagram"></i>
+                        </div>
+                        <div class="texto-instagram">
+                                <a href="http://www.instagram.com" target="_blank">Instagram - @almavivadeco</a>
+                        </div>
+                        <div class="icono-tiktok">
+                                <i class="bi bi-tiktok"></i>
+                        </div>
+                        <div class="texto-tiktok">
+                                <a href="https://www.tiktok.com/" target="_blank">TikTok- @almavivadeco</a>
+                        </div>
+                </div>
+        </section>
 
 </footer>
 <div class="contactenos">               <!--Boton de whatsap-->
     <img src="../img/whatsapp.png" alt="Icono de la aplicacion de whatsap. pulsa para conectar">
     <h5>Contactenos!</h5>
 </div>
+</div>
         <!-- esta linea es para bootstrap-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
