Coder_entrega_final

--- a/index.html
+++ b/index.html
@@ -161,22 +161,30 @@
                                 <div class="carousel-item active c-item">
                                         <img src="./img/vela-cono-carousel-productos.jpeg" class="d-block w-100 c-img"
                                                 alt="Vela de soja cono">
-                                        <div class="carousel-caption d-none d-md-block">
-                                                <h3>Vela Cono</h3>
-                                                <p>Diseño moderno </p>
+                                        <div class="carousel-caption ">
+                                                <a href="./pages/productos.html">
+                                                        <h3>Almohadones </h3>
+                                                </a>
+                                                <p>Dale estilo a tu descanso .</p>
                                         </div>
+                                        
+
                                 </div>
                                 <div class="carousel-item c-item">
                                         <img src="./img/vela-carousel-vaso.jpeg" class="d-block w-100 c-img" alt="Vela de soja en vaso">
-                                        <div class="carousel-caption d-none d-md-block">
-                                                <h3>Vela en Vaso de Whisky</h3>
+                                        <div class="carousel-caption ">
+                                                <a href="./pages/productos.html">
+                                                        <h3>Vela en Vaso de Whisky</h3>
+                                                </a>
                                                 <p>Sobria y funcional</p>
                                         </div>
                                 </div>
                                 <div class="carousel-item c-item">
                                         <img src="./img/vela-carousel-caja.jpeg" class="d-block w-100 c-img" alt="Vela de soja en vaso ">
-                                        <div class="carousel-caption d-none d-md-block">
-                                                <h3>Vela en caja</h3>
+                                        <div class="carousel-caption ">
+                                                <a href="./pages/productos.html">
+                                                        <h3>Vela en caja</h3>
+                                                </a>
                                                 <p>Ideal para tus regalos</p>
                                         </div>
                                 </div>
